# Crysa

./: .env.example  .gitignore  LICENSE  README.md  config.yaml  pyproject.toml
.github/workflows/: ci.yml
crysa/: __init__.py  cli.py  mcp_server.py  watcher.py
crysa/engine/: __init__.py  constants.py  context.py  findings.py  parser.py  reviewer.py
crysa/utils/: __init__.py  config.py  git.py  logger.py
crysa/vulns/: __init__.py  auth.py  exposure.py  idor.py  jwt.py  logic.py  mass_assign.py  privilege.py
tests/: test_config.py  test_constants.py  test_findings.py  test_parser.py  test_reviewer.py
